# actix-rust

./: Cargo.toml  README.md  actix-01.d  target.txt
client/: index.html
client/css/: dashboard.css
client/js/: login.js
scripts/: init.sql
src/: commontypes.rs  main.rs  redirect.rs
src/auth/: forgot_password.rs  login.rs  mod.rs  signup.rs
src/communication/: send_email.rs
