[package]
name = "actix-01"
version = "0.1.0"
authors = ["saiumesh https://github.com/saiumesh535"]
edition = "2018"

[dependencies]
actix-service = "0.4.1"
actix-web = "1.0.0"
actix-files = "0.1.3"
futures = "0.1.25"
failure = "0.1.5"


serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
jsonwebtoken = "6.0.1"
chrono = "0.4.7"

lettre = "0.9.2"
lettre_email = "0.9.2"

postgres = "0.15.2"
r2d2_postgres = "0.14.0"
r2d2 = "0.8.5"